<?xml version="1.0" encoding="utf-8"?>
<!-- Shirley Ng S1626790 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/tvStudentNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_details"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earthquake_search"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limited_to_past_50_days"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
   <RadioGroup
       android:id="@+id/rgSearch"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_margin="5dp">
       <RadioButton
           android:id="@+id/rbtnDate"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/by_date"
           android:layout_marginRight="15dp"/>
       <RadioButton
           android:id="@+id/rbtnDateRange"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/by_date_range"/>
   </RadioGroup>
    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvSearchByDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_date"
                android:textSize="20sp"
                android:layout_marginTop="100dp"/>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <Button
                android:id="@+id/btnSearchByDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tvSearchByDateRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_date_range"
                android:textSize="20sp"
                android:layout_marginTop="100dp"/>
            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:layout_marginTop="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <Button
                android:id="@+id/btnSearchByDateRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ViewSwitcher>
    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
</LinearLayout>